Adding content to the right side of twitter adding trends, who to follow,added css.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <link rel="stylesheet" href="css/blocks/twitterbrand.css"/>
 <link rel="stylesheet" href="css/blocks/sidebar-menu.css"/>
 <link rel="stylesheet" href="css/blocks/timeline-tweet.css"/>
-<link rel="stylesheet" href="css/blocks/trends"/>
-
+<link rel="stylesheet" href="css/blocks/right-trends-for-you.css"/>
+<link rel="stylesheet" href="css/blocks/right-who-to-follow.css"/>
 
 <title>Twitter Clone</title>
 </head>
@@ -67,13 +67,13 @@ More
 <div class="tweet__publish-time">38m</div>
 </div>
 <div class="tweet__content">
-              I have been learning so much on my course of Junior Software Developer.
-              Including creating this twitter clone page
-              You should check out their linkendIn page. ESSA is changing lives!
-              <a href="https://www.linkedin.com/company/essa-software-skills/"
-                >https://www.linkedin.com/company/essa-software-skills/</a>
-              <img class="tweet__image" src="./img/ESSA.png" />
-            </div>
+            I have been learning so much on my course of Junior Software Developer.
+            Including creating this twitter clone page
+            You should check out their linkendIn page. ESSA is changing lives!
+            <a href="https://www.linkedin.com/company/essa-software-skills/"
+              >https://www.linkedin.com/company/essa-software-skills/</a>
+            <img class="tweet__image" src="./img/ESSA.png" />
+          </div>
 </div>
 </div>
 
@@ -86,13 +86,13 @@ More
 <div class="tweet__publish-time">45m</div>
 </div>
 <div class="tweet__content">
-              Overall, Python's versatility and large ecosystem of libraries and frameworks make it a go-to language for a wide variety of tasks, 
-              ranging from simple scripting to complex scientific computing and machine learning projects. I used IDE Shell to create my first Hello World and many more.
-                What is helpful is that python has a library documentation. Check out the documentation
-              <a href="https://docs.python.org/3/contents.html"
-                >https://docs.python.org/3/contents.html</a>
-              <img class="tweet__image" src="./img/IDEshell.png" />
-            </div>
+            Overall, Python's versatility and large ecosystem of libraries and frameworks make it a go-to language for a wide variety of tasks, 
+            ranging from simple scripting to complex scientific computing and machine learning projects. I used IDE Shell to create my first Hello World and many more.
+              What is helpful is that python has a library documentation. Check out the documentation
+            <a href="https://docs.python.org/3/contents.html"
+              >https://docs.python.org/3/contents.html</a>
+            <img class="tweet__image" src="./img/IDEshell.png" />
+          </div>
 </div>
 </div>
 
@@ -121,54 +121,79 @@ More
 </div> -->
 
 </div>
-
-
-
+<!-- right side of twitter adding trends, who to follow -->
 <div class="container__right-sidebar-container">
 <div class="container__right-sidebar">
-<h1>Right Side</h1>
-<h3>Subscribe to Premium</h3>
-<p>Subscribe to unlock nes features and if eligible, receive a share of ads revenue.</p>
-<p>Subscribe button</p>
-
-<h3>Who to follow</h3>
-<p>irish Independent -----Follow button</p>
-<p>breakingnews.ie -----Follow button</p>
-<p>Today FM -----Follow button</p>
-<div class="trends-for-you">
-<div class="trends-for-you__block">
-<div class="trends-for-you__heading">Trends for you</div>
-</div>
-<div class="trends-for-you__block">
-<div class="trends-for-you__meta-information">
-Trending in Germany
-</div>
-<div class="trends-for-you__trend-name">#iPhone12</div>
-<div class="trends-for-you__meta-information">155k Tweets</div>
-</div>
-<div class="trends-for-you__block">
-<div class="trends-for-you__meta-information">
-Trending in Germany
-</div>
-<div class="trends-for-you__trend-name">#AmazonPrimeDay</div>
-</div>
-<div class="trends-for-you__block">
-<div class="trends-for-you__meta-information">
-Trending - Trending
-</div>
-<div class="trends-for-you__trend-name">#autos</div>
-<div class="trends-for-you__meta-information">2,800 Tweets</div>
-</div>
-</div>
-
-</div>
-
-            
-
-
-
-
-
-
+<div class="right-trends-for-you">
+          <div class="trends-for-you__block">
+            <div class="trends-for-you__heading">Trends for you</div>
+          </div>
+          <div class="trends-for-you__block">
+            <div class="trends-for-you__meta-information">
+              Trending in Ireland
+            </div>
+            <div class="trends-for-you__trend-name">#BePatientAndCode</div>
+            <div class="trends-for-you__meta-information">200k Tweets</div>
+          </div>
+          <div class="trends-for-you__block">
+            <div class="trends-for-you__meta-information">
+              Trending in Brazil
+            </div>
+            <div class="trends-for-you__trend-name">#pythonCodingDay</div>
+          </div>
+          <div class="trends-for-you__block">
+            <div class="trends-for-you__meta-information">
+              Trending - Ghana
+            </div>
+            <div class="trends-for-you__trend-name">#ESSAforAll</div>
+            <div class="trends-for-you__meta-information">3,000 Tweets</div>
+          </div>
+        </div>
+        <div class="who-to-follow">
+          <div class="who-to-follow__block">
+            <div class="who-to-follow__heading">Who to follow</div>
+          </div>
+          <div class="who-to-follow__block">
+            <img
+              class="who-to-follow__author-logo"
+              src="./img/profile-image-1.jpg"
+            />
+            <div class="who-to-follow__content">
+              <div>
+                <div class="who-to-follow__author-name">Steph Jr Developer</div>
+                <div class="who-to-follow__author-slug">@stephjnrdev</div>
+              </div>
+              <div class="who-to-follow__button">Follow</div>
+            </div>
+          </div>
+          <div class="who-to-follow__block">
+            <img
+              class="who-to-follow__author-logo"
+              src="./img/profile-image-3.jpg"
+            />
+            <div class="who-to-follow__content">
+              <div>
+                <div class="who-to-follow__author-name">Lais Dr dev</div>
+                <div class="who-to-follow__author-slug">@lasdrdev</div>
+              </div>
+              <div class="who-to-follow__button">Follow</div>
+            </div>
+          </div>
+          <div class="who-to-follow__block">
+            <img
+              class="who-to-follow__author-logo"
+              src="./img/Python.svg.png">
+            <div class="who-to-follow__content">
+              <div>
+                <div class="who-to-follow__author-name">Junior PyCharm</div>
+                <div class="who-to-follow__author-slug">@juniorpycharm</div>
+              </div>
+              <div class="who-to-follow__button">Follow</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
